tests/NormalTests/paczka1/fuzzy1/33530576.err
Error in line 5: S764 A849 50,1
Error in line 12: foBcJx6XS
Error in line 15: ptEc S121 58,2
Error in line 25: KJLayMsWUzg S764 22,5
Error in line 27: NobRQhO S631 19,6
